Migration to spring boot 3.3.3